# shopipy

./: README.md  TODO.md  pyproject.toml  queries.graphql  schema.graphql  shopify.py
shopipy/: __init__.py  shopify.py
shopipy/models/: __init__.py  base.py  customer.py  fulfillment.py  order.py  product.py  user.py  webhook.py
tests/: order_tests.py
