[tool.poetry]
name = "shopipy"
version = "0.1.0"
description = ""
authors = ["Mudassir Chapra <muddi900@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
